In a working state