@@ -1,5 +1,7 @@
 package me.botsko.prism.actionlibs;
 
+import java.lang.reflect.InvocationTargetException;
+
 import me.botsko.prism.actions.Handler;
 
 public class HandlerFactory<H> {
@@ -22,8 +24,12 @@ public class HandlerFactory<H> {
      * @return
      * @throws InstantiationException
      * @throws IllegalAccessException
+     * @throws SecurityException 
+     * @throws NoSuchMethodException 
+     * @throws InvocationTargetException 
+     * @throws IllegalArgumentException 
      */
-    public Handler create() throws InstantiationException, IllegalAccessException {
-        return handlerClass.newInstance();
+    public Handler create() throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+    	return handlerClass.getConstructor().newInstance();
     }
 }
